Fix comprehensive test suite and improve error handling infrastructure
- Resolve all 2544 test failures with systematic approach to HTTP status codes
- Update TimeStatsDTO field names from minutesToday/minutesThisWeek to today/thisWeek for consistency
- Add comprehensive ErrorResponse structure with path field for better error tracking
- Implement proper HTTP status code mapping (400 vs 404, 415 vs 400, 405 vs 500)
- Add InvalidLabelAssociationException to distinguish validation vs ownership errors
- Update GlobalExceptionHandler with HttpRequestMethodNotSupportedException support
- Fix GraphQL error handling to remove extensions.errorCode expectations
- Improve password validation tests with complex patterns avoiding simple repetition
- Add proper ValidationException handling for Jakarta Bean Validation
- Update integration tests across BadgeController, AuthController, UserProfileGraphQL